# mcp

./: .env  .env.example  .gitignore  .mcp.example.json  1.0.0  2025-06-25T01-21_export.csv  CLAUDE.md  MANIFEST.in  README.md  agent.py  chainlit.md  chainlit_app.py  config.py  function.py  main.py  mcp_entry.py  plan  pyproject.toml  requirements.txt  server.py  start.ps1  start_chainlit.bat  streamlit_app.py  test_template_c_article.html  test_template_c_article.md  webui.ts
.chainlit/: config.toml
ai/: article_generator.py  content_checker.py  deep_research.py  image_prompt_generator.py  title_generator.py
config/: profiles.py  settings.py  style_config.yaml
data/: mapping_table.xlsx
docs/: api_flow.md  deployment.md  mcp_client_config.md  quickstart.md  release_checklist.md  troubleshooting.md
examples/: mcp-config.installed.json  mcp-config.source.json
frontend/: README.md  env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
images/: cover_processor.py  image_uploader.py
other/: FRONTEND_SETUP.md  LANGSMITH_GUIDE.md  QUICK_START.md  backend_api.py  langsmith_config.example  package-lock.json  package.json  start_app.bat  start_backend.bat  start_chainlit.bat  start_frontend.bat  statistics_tools.py  t-test.py  启动应用.bat
prompts/: article_prompt.md  image_prompt.md  system_prompt.md  title_prompt.md
quotation-mcp/: .gitignore  .mcp.example.json  README.md  package.json  smoke-match.json
render/: markdown_to_html.py  templates.py  wechat_html_template.py
scripts/: check_release.py
sources/: manual_input.py  (+3 more)
(+69 files in other folders)
